WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23661
Fix the Chromium Win build
https://bugs.webkit.org/show_bug.cgi?id=23661
Summary
Fix the Chromium Win build
Dmitry Titov
Reported
2009-01-30 23:38:23 PST
This fixes the Chromium build after merge with
r40409
of WebKit
Attachments
Proposed patch
(1.20 KB, patch)
2009-01-30 23:46 PST
,
Dmitry Titov
no flags
Details
Formatted Diff
Diff
Added ChangeLog entry
(1.82 KB, patch)
2009-01-31 08:58 PST
,
Dmitry Titov
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dmitry Titov
Comment 1
2009-01-30 23:46:12 PST
Created
attachment 27212
[details]
Proposed patch Reflects changes in Chromium that had to be made to accomidate Apple plans.
Darin Adler
Comment 2
2009-01-31 07:29:08 PST
Comment on
attachment 27212
[details]
Proposed patch I don't understand the "Apple plans" comment here. Torch Mobile is doing a major refactoring of form elements to make WML work, but this is not sponsored by Apple.
Dmitry Titov
Comment 3
2009-01-31 08:11:57 PST
Sorry about that, I don't know myself what I was thinking here :-( long day. Meant to say "to fix the the Chromium build after recent changes in WebKit". I was doing the merge of WebKit sources into Chromium tree yesterday and since we don't yet have Chromium buildbot in WebKit, there are often build breaks so we fix them and then post fixed files back into WebKit to avoid 'forked' state. I guess I was too sleepy typing the comment, please ignore it. :-)
Dimitri Glazkov (Google)
Comment 4
2009-01-31 08:41:25 PST
Need a log entry?
Dmitry Titov
Comment 5
2009-01-31 08:58:25 PST
Created
attachment 27218
[details]
Added ChangeLog entry
Darin Adler
Comment 6
2009-01-31 09:07:31 PST
Comment on
attachment 27218
[details]
Added ChangeLog entry r=me
Dimitri Glazkov (Google)
Comment 7
2009-02-02 20:24:46 PST
Landed as
http://trac.webkit.org/changeset/40517
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug