2009-02-02  Dmitry Titov  <dimich@chromium.org>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=23661
        Fix Chromium build.

        * history/HistoryItem.h: need to include <wtf/OwnPtr.h>

        * rendering/RenderThemeChromiumMac.mm:
        (WebCore::RenderThemeChromiumMac::adjustMenuListStyle): isEnabled() is now on FormControlElement.

Canonical link: https://commits.webkit.org/32700@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40517 268f45cc-cd09-0410-ab3c-d52691b4dbfc